--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="casbecera">
+                casbecera
+            </div>
             <div id="post">
                 <h1>este es el titulo agradable e interesante del post</h1>
                 <p>Y aqui esta el parrafo de inicio donde estaremos explicando las cosas increeibles que se pueden hacer con ramas</p>
