finalizada la casbecera con diseñoazul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id="casbecera">
-                casbecera
+                Hyperblog
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1>este es el titulo agradable e interesante del post</h1>
