--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="casbecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1>este es el titulo agradable e interesante del post</h1>
