Color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,12 +6,9 @@
     <body>
         <div id="container">
             <div id="casbecera">
+                <img id="logo" src="imagenes/Dragon.png" />
                 Hyperblog
-<<<<<<< HEAD
-                <span id="tagline">Tu blog maestro</span>
-=======
-                <span id="tagline">Tu blog de cabecera</span>
->>>>>>> casbecera
+                <span id="tagline">tu blog de casbecera</span>
             </div>
             <div id="post">
                 <h1>este es el titulo agradable e interesante del post</h1>
