--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             </div>
             <div id="post">
                 <h1>este es el titulo agradable e interesante del post</h1>
-                <p>Y aqui esta el párrafo de inicio donde estaremos explicando las cosas increeibles que se pueden hacer con ramas</p>
+                <p>Y aqui esta el p&aacute;rrafo de inicio donde estaremos explicando las cosas increeibles que se pueden hacer con ramas</p>
                 <p>los blogs son una mejor forma para compartir informacion e ideas. Es mejor que incluso ir a conferencia o salir en Youtube. A menos que seas un rockstar. pero ahora mismo no los eres...</p>
                 <p>suscribete y dele like para seguir</p>
             </div>
